# claude-code-log

./: .gitignore  ACTION_README.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  action.yml  justfile  mkdocs.yml  pyproject.toml
claude_code_log/: cache.py  cli.py  converter.py  dag.py  discovery.py  git_remote.py  html_renderer.py  image_export.py  markdown_plugins.py  models.py  parser.py  patterns.py  plugins.py  renderer.py  renderer_code.py  renderer_timings.py  tool_parser.py  tui.py  utils.py  workflow.py
dev-docs/: FOLD_STATE_DIAGRAM.md  MESSAGE_REFACTORING.md  RENAME_CONTENT_TO_MESSAGE.md  TEMPLATE_MESSAGE_CHILDREN.md  agents.md  application_model.md  css-classes.md  dag.md  implementing-a-tool-renderer.md  message-hierarchy.md  messages.md  plugins.md  rendering-architecture.md  rendering-next.md  restoring-archived-sessions.md  teammates.md  workflows.md
docs/: changelog.md  contributing.md
scripts/: extract_message_samples.py  gen_nested_agents_fixture.py  gen_workflow_fixture.py  generate_style_guide.py
test/: conftest.py  snapshot_serializers.py  test_ai_title.py  test_ansi_colors.py  test_askuserquestion_rendering.py  test_async_agents.py  test_away_summary.py  test_bash_rendering.py  test_branch_label_source.py  test_cache.py  test_cache_integration.py  test_cli.py  test_collapsible_overlap_browser.py  (+80 more)
test/_plugins/clmail/: README.md  pyproject.toml
test/_plugins/clmail/src/claude_code_log_clmail_test/: __init__.py
test/_plugins/clmail/src/claude_code_log_clmail_test/transformers/: __init__.py  hook_demotion.py  tool_communicate.py
(+247 files in other folders)
